--- a/intecap/src/main/resources/application.properties
+++ b/intecap/src/main/resources/application.properties
@@ -1,12 +1,24 @@
+# Nombre de la aplicación
 spring.application.name=intecap
-spring.jpa.database=MYSQL
 
-spring.sql.init.platform=mysql
-
+# Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda
-
 spring.datasource.username=root
-
 spring.datasource.password=
 
+# Mostrar SQL en consola y ajustar el manejo de tablas
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Especificar el dialecto de MySQL (ajusta según tu versión de MySQL)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Configuración de CORS para permitir headers de autenticación
+# Nota: este ajuste se hace en el código, pero incluyo cómo configurarlo aquí para referencia.
+# No olvides exponer el header de autorización en tu configuración CORS en el código.
+
+# Logging detallado para diagnosticar problemas de autenticación y conexiones
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.intecap=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
