--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "frontend": "file:",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.14.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
